--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,10 @@
 .header{
 border-radius: 5px;
 border: 3px solid rgba(255, 255, 255, 0.29);
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 12px 12px 12px 23px;
 }
 .title{
 color: #FFF;
@@ -12,5 +16,5 @@ line-height: 16px;
 text-transform: uppercase;
 
 width: 83px;
-padding: 12px 12px 12px 23px;
+
 }
