--- a/src/components/GameStarted/GameStarted.module.scss
+++ b/src/components/GameStarted/GameStarted.module.scss
@@ -1,13 +1,15 @@
 .container{
     padding-top: 105px;
     display: flex;
-    gap: 25px;
+    gap: 30px;
 }
 
 .action-container{
+    display: block;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .paper{
@@ -45,6 +47,17 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='137' height='139' viewBox='0 0 137 139' fill='none'%3E%3Cg filter='url(%23filter0_d_0_1396)'%3E%3Cellipse cx='68.5002' cy='66.6709' rx='64.6828' ry='66.3291' fill='%239D1634'/%3E%3C/g%3E%3Cellipse cx='68.5002' cy='63.7302' rx='64.6828' ry='63.3884' fill='%23DB2E4D'/%3E%3Cellipse cx='68.5002' cy='63.7302' rx='64.6828' ry='63.3884' fill='url(%23paint0_linear_0_1396)'/%3E%3Cellipse cx='68.5002' cy='65.0372' rx='49.6555' ry='49.6651' fill='%23BABFD4'/%3E%3Cellipse cx='68.5002' cy='67.6512' rx='49.6555' ry='47.0512' fill='url(%23paint1_linear_0_1396)'/%3E%3Cpath d='M87.7357 57.9043C87.163 50.6483 79.0513 51.3892 79.0513 51.3892C75.6274 45.3258 70.2789 49.7176 70.2789 49.7176C66.1698 43.7751 61.0178 49.2818 61.0178 49.2818C52.1348 48.3194 52.4791 55.6157 52.4791 55.6157C52.2701 57.9351 53.731 65.1107 53.731 65.1107C52.4132 60.9749 49.5548 64.408 49.5548 64.408C46.0408 69.8558 48.686 72.8379 48.686 72.8379C53.4409 78.4366 63.5742 85.156 63.5742 85.156C67.2434 87.2678 65.6915 89.1508 65.6915 89.1508L87.8849 85.4667L88.3951 81.2384C91.7688 70.9874 87.7357 57.9043 87.7357 57.9043Z' fill='%233B4262'/%3E%3Cdefs%3E%3Cfilter id='filter0_d_0_1396' x='0.817383' y='0.341858' width='135.366' height='138.658' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='3'/%3E%3CfeGaussianBlur stdDeviation='1.5'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.196706 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_0_1396'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_0_1396' result='shape'/%3E%3C/filter%3E%3ClinearGradient id='paint0_linear_0_1396' x1='3.81738' y1='0.341858' x2='3.81738' y2='127.119' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white' stop-opacity='0.0966455'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0.01'/%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear_0_1396' x1='117.333' y1='114.702' x2='117.333' y2='22.1598' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23F3F3F3'/%3E%3Cstop offset='1' stop-color='%23DADADA'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
 
+}
+
+.status{
+    width: 288px;
+    height: 284px;
+    position: absolute;
+    top: -74px;
+    left: -32px;
+    background-repeat: no-repeat;
+    
+    background-image: url("data:image/svg+xml,%3Csvg width='238' height='284' viewBox='0 0 238 284' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg opacity='0.5'%3E%3Cellipse opacity='0.05' cx='94.5' cy='142' rx='83.5' ry='82' fill='white'/%3E%3Cellipse opacity='0.05' cx='94.5' cy='142.5' rx='111.5' ry='109.5' fill='white'/%3E%3Cellipse opacity='0.05' cx='94' cy='142' rx='144' ry='142' fill='white'/%3E%3C/g%3E%3C/svg%3E ");
 }
 
 .text{
