--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,7 +3,7 @@
     margin-left: auto;
     margin-right: auto;
     padding-top: 32px;
-    padding-bottom: 56px;
+    // padding-bottom: 56px;
 
   
 }
