--- a/src/components/ModalRules/ModalRules.module.scss
+++ b/src/components/ModalRules/ModalRules.module.scss
@@ -11,6 +11,27 @@
   z-index: 1200;
 }
 
+.btn-open{
+display: block;
+margin-left: auto;
+margin-right: auto;
+margin-top: 52px;
+width: 128px;
+height: 40px;
+border-radius: 8px;
+border: 1px solid #FFF;
+background-color: transparent;
+
+color: #FFF;
+
+text-align: center;
+font-family: Barlow Semi Condensed;
+font-size: 16px;
+font-weight: 600;
+letter-spacing: 2.5px;
+text-transform: uppercase;
+}
+
 .modal {
   height: 100vh;
   border-radius: 8px;
