--- a/src/components/GameStarted/GameStarted.module.scss
+++ b/src/components/GameStarted/GameStarted.module.scss
@@ -70,3 +70,18 @@ font-weight: 700;
 line-height: 32px; 
 letter-spacing: 1.875px;
 }
+
+.unselected{
+  display: block;
+  position: relative;
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.10);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 28.7px;
+  top: 11.32px;
+
+
+  }
