--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -4,6 +4,11 @@
     margin-right: auto;
     padding-top: 32px;
     padding-bottom: 44px;
-
+ 
+    @media only screen and (min-width: 768px) {
+        max-width: 700px;
+        padding-top: 48px;
+        padding-bottom: 32.3px;
+    }
   
 }
