--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,9 +5,14 @@ display: flex;
 align-items: center;
 justify-content: space-between;
 padding: 12px 12px 12px 23px;
+
+@media only screen and (min-width: 768px) {
+    padding: 27.7px 24px 18px 33.32px;
+}
 }
 .title{
 color: #FFF;
+margin: 0;
 text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.20);
 font-family: Barlow Semi Condensed;
 font-size: 21px;
@@ -17,4 +22,10 @@ text-transform: uppercase;
 
 width: 83px;
 
+@media only screen and (min-width: 768px) {
+    font-size: 40px;
+    width: 155.48px;
+    height: 92.7px;
+    line-height: 32px;
+}
 }
