--- a/src/components/WinScore/WinScore.module.scss
+++ b/src/components/WinScore/WinScore.module.scss
@@ -6,6 +6,11 @@
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
+
+  @media only screen and (min-width: 768px) {
+    width: 150px;
+    height: 114px;
+  }
 }
 
 .score-text {
@@ -15,6 +20,11 @@ text-align: center;
 font-size: 10px;
 font-weight: 600;
 letter-spacing: 1.563px;
+
+@media only screen and (min-width: 768px) {
+  font-size: 16px;
+  letter-spacing: 2.5px;
+}
 }
 
 .score-current {
@@ -24,4 +34,9 @@ text-align: center;
 font-size: 40px;
 font-weight: 700;
 line-height: 40px; 
+
+@media only screen and (min-width: 768px) {
+  font-size: 64px;
+  line-height: 64px;
+}
 }
