--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,6 +8,9 @@ padding: 12px 12px 12px 23px;
 
 @media only screen and (min-width: 768px) {
     padding: 27.7px 24px 18px 33.32px;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
 }
 .title{
