--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -6,9 +6,10 @@
     padding-bottom: 44px;
  
     @media only screen and (min-width: 768px) {
-        max-width: 700px;
+        max-width: 1440px;
         padding-top: 48px;
-        padding-bottom: 32.3px;
+        padding-bottom: 32px;
+        padding-right: 32px;
     }
   
 }
