--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -1,5 +1,5 @@
 .container{
-    background: radial-gradient(134.34% 134.34% at 50% 0%, #1F3757 0%, #131537 100%);
-    height: 100%;
+
+        height: 110vh;
 
 }
