--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,9 @@ body {
   font-family: 'Barlow Semi Condensed',  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  background: radial-gradient(134.34% 134.34% at 50% 0%, #1F3757 0%, #131537 100%);
 }
+
 
 
 
