--- a/src/components/GameOver/GameOver.module.scss
+++ b/src/components/GameOver/GameOver.module.scss
@@ -1,5 +1,12 @@
 .container {
     padding-top: 62px;
+
+    @media only screen and (min-width: 768px) {
+    position: absolute;
+    top: 430px;
+    left: 602px;
+    padding: 0;
+    }
 }
 
 .text {
