adding hover/focus for buttons

--- a/src/components/GameOver/GameOver.module.scss
+++ b/src/components/GameOver/GameOver.module.scss
@@ -43,3 +43,9 @@ font-family: Barlow Semi Condensed;
 
 cursor: pointer;
 }
+
+.btn:hover, .btn:focus{
+  @media only screen and (min-width: 768px) {
+    color: #DB2E4D;
+  }
+}
