--- a/src/components/ModalRules/ModalRules.module.scss
+++ b/src/components/ModalRules/ModalRules.module.scss
@@ -51,6 +51,14 @@ cursor: pointer;
 }
 }
 
+.btn-open:hover, .btn-open:focus{
+  @media only screen and (min-width: 768px) {
+    border: 1px solid #FFF;
+    background: linear-gradient(0deg, #F3F3F3 0%, #FFF 100%);
+    color: #3B4262;
+  }
+}
+
 .modal {
   height: 100vh;
   border-radius: 8px;
@@ -126,4 +134,10 @@ margin-bottom: 90px;
     top: 38px;
     left: 336px;
     }
+}
+
+.btn-close:hover, .btn-close:focus{
+  @media only screen and (min-width: 768px) {
+   filter: contrast(100);
+  }
 }
