--- a/src/components/RockPaperScissors/RockPaperScissors.module.scss
+++ b/src/components/RockPaperScissors/RockPaperScissors.module.scss
@@ -5,18 +5,47 @@
     background-position: top 177px left 55px;
 
     @media only screen and (min-width: 768px) {
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
         max-width: 476px;
         padding-top: 64px;
         margin-left: auto;
         margin-right: auto;
-
+        
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='306' height='277' viewBox='0 0 306 277' fill='none'%3E%3Cpath opacity='0.2' fill-rule='evenodd' clip-rule='evenodd' d='M292.5 7.5C292.5 7.5 0.895138 7.5 5.57388 7.5C10.2526 7.5 153.466 261.5 153.466 261.5L292.5 7.5Z' stroke='black' stroke-width='15'/%3E%3C/svg%3E");
         background-position: top 156px left 94.5px;
     }
 }
 
+.eclipse{
+    display: none;
+}
+
+.action{
+    position: relative;
+    z-index: 10;
+}
+
+.action:hover, .action:focus{
+ .eclipse{
+@media only screen and (min-width: 768px) {
+    display: inline-block;
+    position: absolute;
+    top: -24px;
+    left: -24px;
+ 
+
+    z-index: 1;
+    width: 252px;
+    height: 248px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='252' height='248' viewBox='0 0 252 248' fill='none'%3E%3Cellipse opacity='0.05' cx='126' cy='124' rx='126' ry='124' fill='white'/%3E%3C/svg%3E");
+}
+ }
+}
+
+
 .paper{
+   
     width: 136px;
     height: 139px;
     background-color: transparent;
@@ -29,6 +58,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 margin-right: 39px;
 
 @media only screen and (min-width: 768px) {
+    display: block;
     width: 198px;
     height: 203px;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='204' height='209' viewBox='0 0 204 209' fill='none'%3E%3Cg filter='url(%23filter0_d_0_1767)'%3E%3Cellipse cx='102' cy='101.5' rx='99' ry='101.5' fill='%232A45C2'/%3E%3C/g%3E%3Cellipse cx='102' cy='97' rx='99' ry='97' fill='%234664F4'/%3E%3Cellipse cx='102' cy='97' rx='99' ry='97' fill='url(%23paint0_linear_0_1767)'/%3E%3Ccircle cx='102' cy='99' r='76' fill='%23BABFD4'/%3E%3Cellipse cx='102' cy='103' rx='76' ry='72' fill='url(%23paint1_linear_0_1767)'/%3E%3Cpath d='M131.529 79.3231C130.969 79.1082 130.386 79.015 129.847 79.0526C129.07 79.107 128.442 79.4242 128.07 79.9433C125.878 83.0268 124.083 88.8501 122.636 93.529C121.972 95.6928 121.08 98.5885 120.434 99.9628C119.761 96.1125 120.522 82.008 120.817 76.5762L120.821 76.4885C121.026 72.7148 121.054 72.053 121.009 71.7624C120.684 69.6923 119.858 68.3335 118.553 67.7253C117.234 67.1085 115.521 67.3814 113.675 68.4968C112.75 69.0588 112.494 70.9878 111.7 79.7314L111.697 79.7699C111.26 84.5735 110.254 95.634 109.015 97.476C107.617 94.8989 105.695 80.2565 104.865 73.9186C104.284 69.4799 103.946 66.9312 103.719 66.1616C103.24 64.549 101.219 63.1767 99.2179 63.1007C97.5524 63.0177 96.1858 63.8687 95.5336 65.3473C94.3134 66.7112 94.7445 71.2343 96.0932 81.9469C96.7352 87.0452 98.0604 97.5765 97.2264 98.7578C95.5635 98.5762 92.7088 91.9796 88.7404 79.1456C87.6271 75.5514 87.2825 74.4703 86.9405 73.9971C86.2664 72.3489 83.9755 71.0776 81.9214 71.2212C81.746 71.2335 81.5755 71.2564 81.407 71.2886C80.3318 71.5031 77.8783 72.4972 78.4013 77.0847C79.8501 83.4449 81.4238 88.1147 82.9511 92.6472L82.982 92.7379C83.8958 95.4527 84.7597 98.0178 85.5624 100.865C87.4545 107.586 86.7188 111.756 86.7098 111.803C86.6469 112.232 86.515 112.494 86.3165 112.586C86.2451 112.62 86.1536 112.64 86.0504 112.647C85.4508 112.689 84.5514 112.29 84.0879 112.03C83.0292 109.998 77.7576 100.311 72.9809 98.967L72.8093 98.9162L72.6356 98.9324C70.8837 99.0986 69.5955 99.7637 68.8082 100.909C67.5606 102.72 68.077 105.027 68.2023 105.489L68.2727 105.655C68.3117 105.725 72.1424 112.74 72.7352 116.003C73.2465 118.8 75.8915 121.832 78.018 124.268L78.1056 124.367C78.7993 125.164 79.398 125.853 79.8701 126.491C86.0405 132.955 95.7988 138.393 95.8784 138.437C97.0959 139.339 97.7729 140.211 97.8444 140.962C97.8897 141.453 97.6356 141.747 97.6268 141.757L97.4143 141.979L98.7631 143.296L124.508 141.48L125.606 136.428C129 122.159 128.291 109.994 128.28 109.912C128.292 109.465 129.244 105.136 130.009 101.639L130.031 101.55C131.556 94.5828 133.453 85.9137 133.816 82.6166C133.975 81.2068 133.077 79.9116 131.529 79.3231Z' fill='%233B4262'/%3E%3Cdefs%3E%3Cfilter id='filter0_d_0_1767' x='0' y='0' width='204' height='209' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='3'/%3E%3CfeGaussianBlur stdDeviation='1.5'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.196706 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_0_1767'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_0_1767' result='shape'/%3E%3C/filter%3E%3ClinearGradient id='paint0_linear_0_1767' x1='3' y1='0' x2='3' y2='194' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white' stop-opacity='0.0966455'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0.01'/%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear_0_1767' x1='176.74' y1='175' x2='176.74' y2='33.3868' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23F3F3F3'/%3E%3Cstop offset='1' stop-color='%23DADADA'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
@@ -38,6 +68,7 @@ margin-right: 80px;
 }
 
 .scissors{
+  
     width: 136px;
     height: 139px;
     background-color: transparent;
@@ -49,6 +80,7 @@ margin-right: 80px;
 
 
     @media only screen and (min-width: 768px) {
+        display: block;
 width: 198px;
 height: 203px;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='204' height='209' viewBox='0 0 204 209' fill='none'%3E%3Cg filter='url(%23filter0_d_0_1777)'%3E%3Cellipse cx='102' cy='101.5' rx='99' ry='101.5' fill='%23C76C1B'/%3E%3C/g%3E%3Cellipse cx='102' cy='97' rx='99' ry='97' fill='%23EB9F0E'/%3E%3Cellipse cx='102' cy='97' rx='99' ry='97' fill='url(%23paint0_linear_0_1777)'/%3E%3Ccircle cx='102' cy='99' r='76' fill='%23BABFD4'/%3E%3Cellipse cx='102' cy='103' rx='76' ry='72' fill='url(%23paint1_linear_0_1777)'/%3E%3Cpath d='M82.1599 98.3494L90.3693 86.8064C86.957 86.2376 80.691 86.1115 75.5583 91.2442C67.4676 99.3349 64.1909 116.813 63.5079 121.044L84.0706 141.606C87.7722 141.289 104.162 139.101 119.954 123.309C120.121 122.968 123.968 120.125 120.823 116.98C119.322 115.479 116.837 115.507 115.303 117.041C114.522 117.822 113.308 117.833 112.543 117.069C111.779 116.304 111.79 115.09 112.571 114.309L118.151 108.728C120.987 105.892 118.314 101.108 114.356 102.258L109.788 106.169C108.953 106.896 107.713 106.77 107.027 105.977C106.319 105.157 106.47 103.915 107.277 103.215C123.235 89.2135 120.906 90.8998 131.173 81.2763C135.009 78.0824 130.183 72.4328 126.403 75.6675L101.566 98.0027C100.843 98.6181 99.7357 98.6297 99.0246 97.9746C98.2041 97.266 98.1852 96.245 98.7216 95.4384L116.046 68.5052C118.579 65.0757 113.595 61.2668 110.927 64.7242L85.3117 100.55C84.6939 101.443 83.4491 101.648 82.6006 101.023C81.7496 100.452 81.5166 99.2119 82.1599 98.3494Z' fill='%233B4262'/%3E%3Cdefs%3E%3Cfilter id='filter0_d_0_1777' x='0' y='0' width='204' height='209' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='3'/%3E%3CfeGaussianBlur stdDeviation='1.5'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.196706 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_0_1777'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_0_1777' result='shape'/%3E%3C/filter%3E%3ClinearGradient id='paint0_linear_0_1777' x1='3' y1='0' x2='3' y2='194' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white' stop-opacity='0.0966455'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0.01'/%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear_0_1777' x1='176.74' y1='175' x2='176.74' y2='33.3868' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23F3F3F3'/%3E%3Cstop offset='1' stop-color='%23DADADA'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
