--- a/src/components/GameOver/GameOver.module.scss
+++ b/src/components/GameOver/GameOver.module.scss
@@ -1,13 +1,22 @@
-.container {
+.container{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
+}
+
+.wrapper {
     padding-top: 62px;
 
     @media only screen and (min-width: 768px) {
     position: absolute;
-    top: 430px;
-    left: 602px;
+    top: -235px;
+    left: 25px;
     padding: 0;
     }
+
 }
+
 
 .text {
   margin-top: 0;
